force-app/main/default/objects/gmpkg__Extension_Settings__c/gmpkg__Extension_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Extension Settings</label>
</CustomObject>