force-app/main/default/objects/gmpkg__Extension_Settings__c/fields/gmpkg__Attributes__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Attributes__c</fullName>
    <label>Attributes</label>
    <type>TextArea</type>
</CustomField>