force-app/main/default/objects/gmpkg__Extension_Settings__c/fields/gmpkg__Enabled__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>