force-app/main/default/objects/gmpkg__Extension_Settings__c/fields/gmpkg__LightningApp__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__LightningApp__c</fullName>
    <defaultValue>&quot;gmpkg:UserGridWorkbenchApp&quot;</defaultValue>
    <label>Lightning App</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>